--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,35 +4,54 @@
 	<meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
 	<title>KWIC</title>
 	
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css"> 
 	
 	<script src="js/jquery-3.3.1.min.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 </head>
 
-<body>
-	<div id="inputContainer">
-		<h1>KWIC System</h1>
-		<p>Please enter a line.</p>
-		<input id="lineInput" type="text">
-		<button id="submitButton" onclick="submitLine()">Submit Line</button>
-	</div>
+<body class="bg-light">
+	<div class="row justify-content-center mb-4">
+		<h1 class="text-primary">KWIC System</h1>
+    </div>
 
-	<div id="mainContainer">
-		<div id="inputConatiner">
-			<h3>Input Lines</h3>
-			<table id="inputTable"></table>
-		</div>
-		
-		<div id="shiftedConatiner">
-			<h3>Circularly Shifted Lines</h3>
-			<table id="shiftedTable"></table>
-		</div>
+    <div class="row justify-content-center">
+        <p class="text-secondary">Please enter a line.</p>
+    </div>
 
-		<div id="sortedConatiner">
-			<h3>Alphabetized Lines</h3>
-			<table id="sortedTable"></table>
-		</div>
-	</div>
+    <div class="row justify-content-center mb-3">
+        <input id="lineInput" class="col-md-3 border border-primary" type="text">
+    </div>
+
+    <div class="row justify-content-center mb-4">
+        <button id="submitButton" onclick="submitLine()" class="btn btn-primary">Submit Line</button>
+    </div>
+    
+    <div class="row px-5">
+        <div class="col-md-4">
+            <table id="inputTable" class="table table-bordered text-center">
+            	<tr>
+                    <th class="text-center">Input Lines</th>
+                </tr>
+            </table>
+        </div>
+
+        <div class="col-md-4">
+            <table id="shiftedTable" class="table table-bordered text-center">
+            	<tr>
+                    <th class="text-center">Circularly Shifted Lines</th>
+                </tr>
+            </table>
+        </div>
+
+        <div class="col-md-4">
+            <table id="sortedTable" class="table table-bordered text-center">
+            	<tr>
+                    <th class="text-center">Alphabetized Lines</th>
+                </tr>
+            </table>
+        </div>
+    </div>
 </body>
 </html>
